# tauri-plugin-safe-area-only

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: SafeAreaOnly.swift
permissions/autogenerated/: reference.md
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
