[package]
name = "tauri-plugin-safe-area-only"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-safe-area-only"

[dependencies]
tauri = { version = "2.4.1" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.1.1", features = ["build"] }
tauri-build = "2.1.1"